--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules/\n.DS_Store\n*.log
 
 foe_data_cx.zip
+
+# Store assets and documentation
+store_screenshot.png
+STORE_LISTING.md
+
+# Data exports
+foe_data_*.json
+city_map_export_*.json
+debug_keys.js
