feat(i18n): Add multilanguage support with 5 languages
- Add i18n.js module for internationalization
- Add language files: en.json, es.json, fr.json, de.json, it.json
- Update popup.html with data-i18n attributes and language selector
- Update popup.js to initialize i18n and use translated messages
- Update map_viewer.html/js with i18n integration
- Update manifest.json to expose language files as web resources

Languages are auto-detected from browser settings, with fallback to English.
Users can manually select their preferred language in settings.

--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,8 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "lib/xlsx.mini.min.js"
+        "lib/xlsx.mini.min.js",
+        "src/lang/*.json"
       ],
       "matches": [
         "*://*.forgeofempires.com/*"
