--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "ForgeData",
-  "version": "1.2.1",
-  "description": "Exporta y analiza datos de Forge of Empires. Genera Excel de eficiencia militar.",
+  "version": "1.2.2",
+  "description": "Exporta y analiza datos de Forge of Empires. Genera Excel de eficiencia militar. Multilanguage support.",
   "permissions": [
     "activeTab",
     "scripting",
