feat: Add Excel icons and efficiency improvements - v1.2.3
- Added visual icons in Excel headers for boost types (FP, Goods, efficiency modes)
- Improved efficiency display with mode-specific icons (Global, BG, GE, QI)
- Updated .gitignore to exclude dev files
- Updated README and STORE_LISTING for v1.2.3

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ forge_data_v1.2.zip
 forge_data_local.zip
 forge_data_v1.2.1.zip
 foe_catalog_2025-12-27.xlsx
+
+# Development files
+lib/icons/
+*.py
+*_check.xlsx
+forge_data_v1.2.3.zip
